# minquizapp

./: .gitignore
client/: package-lock.json  package.json
client/src/app/: layout.tsx  page.tsx
client/src/app/edit/[id]/: page.tsx
client/src/app/login/: page.tsx
client/src/components/ui/: checkbox.tsx  input.tsx  radio-group.tsx  select.tsx  tabs.tsx  textarea.tsx
client/src/lib/: api.ts
client/src/pages/: Login.tsx
server/: .env  Cargo.toml
server/db/: dev.db
server/src/: db.rs  main.rs  router.rs
server/src/auth/: auth_middleware.rs  jwt.rs
server/src/entity/: mod.rs  test.rs  user.rs
server/src/handlers/: mod.rs  test_handler.rs  user_handler.rs
server/src/hash/: mod.rs
server/src/models/: user.rs
server/src/routes/: auth_routes.rs  mod.rs  test_routes.rs  user_routes.rs
server/src/services/: user_service.rs
