[package]
name = "rustaxum"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
axum = {version = "0.7", features = ["multipart"]}
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
jsonwebtoken = "9"
chrono = "0.4"
argon2 = { version = "0.5", features = ["std", "password-hash"] }
tower = "0.5.3"
password-hash = "0.5"
serde_json = "1.0.149"
tower-http = { version = "0.5", features = ["cors"] }